[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arxiv-search-kit"
version = "0.1.2"
description = "Blazing fast ArXiv paper search — 928K papers in 40ms"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "koookieee", email = "vatsvidushee@gmail.com" }]
keywords = [
    "arxiv", "paper-search", "academic-search", "specter2",
    "semantic-search", "research", "nlp", "machine-learning",
    "literature-review", "citation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "lancedb>=0.6",
    "numpy>=1.24",
    "httpx>=0.24",
    "networkx>=3.0",
    "scipy>=1.11",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0",
    "transformers>=4.36",
    "adapters>=1.0",
]
cpu = [
    "torch>=2.0",
    "transformers>=4.36",
    "adapters>=1.0",
]
# Index building (includes ML + keyword extraction)
index = [
    "torch>=2.0",
    "transformers>=4.36",
    "adapters>=1.0",
    "yake>=0.4",
    "scikit-learn>=1.3",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/koookieee/arxiv-search-kit"
Repository = "https://github.com/koookieee/arxiv-search-kit"
Issues = "https://github.com/koookieee/arxiv-search-kit/issues"

[tool.hatch.build.targets.wheel]
packages = ["arxiv_search_kit"]
